Fix the header styling to be middle aligned

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -159,10 +159,10 @@ html {
 
 #header-inner {
   @include iphone5-portrait {
-    vertical-align: top;
+    vertical-align: middle;
   }
   @include iphone6-landscape {
-    vertical-align: top;
+    vertical-align: middle;
   }
 }
 
